feat: add list user notify_sub api
