# backend/docs/swagger.yaml
@@ -1116,6 +1116,21 @@ definitions:
       web_notify:
         type: boolean
     type: object
+  model.UserNotiySub:
+    properties:
+      created_at:
+        type: integer
+      id:
+        type: integer
+      third_id:
+        type: string
+      type:
+        $ref: '#/definitions/model.MessageNotifySubType'
+      updated_at:
+        type: integer
+      user_id:
+        type: integer
+    type: object
   model.UserPointRecord:
     properties:
       created_at:
@@ -6437,6 +6452,30 @@ paths:
                   type: string
               type: object
       summary: get user notify sub bind url
+      tags:
+      - user
+  /user/notify_sub/bind:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/context.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/model.ListRes'
+                  - properties:
+                      items:
+                        items:
+                          $ref: '#/definitions/model.UserNotiySub'
+                        type: array
+                    type: object
+              type: object
+      summary: list notify sub
       tags:
       - user
   /user/point:
